# reckonsys_gen_ai

./: .env.sample  .gitignore  Dockerfile.mcp  README.md  main.py  mcp_pyproject.toml  pyproject.toml  references.html
backend/: main.py
dataset/: crawl.py  embed.py  preprocess.py  sample_search.py  scrape.py  vectordb.py
dataset/data/: crawled_links.json  dataset.parquet  embed.parquet  milvus.db
dataset/data/crawled/: links.json
dataset/data/scraped/: automate_with_ansible.txt  behind_papermatch.txt  behind_papermatchbio.txt  benchmark_of_factotum___gnu_linux_on_thu_jul_17_2025.txt  books_read.txt  browse_intranet_from_home.txt  create_a_simple_website.txt  how_to_change_ssh_port_on_oci.txt  how_to_copy_ssh_keys_from_master_to_compute_node.txt  how_to_fix_tablet_app_orientations.txt  how_to_install_cloudflared_on_alpine.txt  how_to_run_jupyter_on_compute_node.txt  how_to_run_tailscale_without_root.txt  how_to_ssh_to_another_user.txt  isoddapi.txt  masala_tea_recipe.txt  milvus_on_podman.txt  n-gram_language_models.txt  papermatch_analysis.txt  project_wishlist.txt  selfhosting_setup.txt  setup_nebula.txt  ssh_into_android_with_termux_&_cloudflared.txt  stop_podman_containers_from_getting_killed.txt  tailscale_on_kindle.txt  ultimate_coffee_recipes.txt  update_podman_containers_manually.txt  wash_your_cocktails.txt  what_about_the_island?.txt  wsa_with_kernelsu.txt
mcp_server/: main.py
