[project]
name = "reckonsys-gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "backoff>=2.2.1",
    "bs4>=0.0.2",
    "datasets>=4.3.0",
    "langchain[openai]>=1.0.3",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-text-splitters>=1.0.0",
    "mcp[cli]>=1.20.0",
    "mixedbread>=0.36.0",
    "pandas>=2.3.3",
    "pymilvus[milvus-lite]>=2.6.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "tavily-python>=0.7.12",
    "fastapi[standard]>=0.120.4",
]
